[package]
name = "rustserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.0"
json = "0.12.4"
serde_json = "1.0.82"
serde = {version = "1.0.139",features =["derive"]}
